@@ -15,8 +15,7 @@ Size=191,48
 Collapsed=0
 
 [Window][UHE Settings]
-ViewportPos=1150,124
-ViewportId=0x30F54064
+Pos=582,79
 Size=683,773
 Collapsed=0
 
@@ -37,9 +36,9 @@ Size=294,475
 Collapsed=0
 
 [Window][Texture Editor]
-ViewportPos=43,82
+ViewportPos=121,48
 ViewportId=0x7361E594
-Size=2063,1081
+Size=1502,938
 Collapsed=0
 
 [Window][Texture Creation]
@@ -49,9 +48,9 @@ Size=734,189
 Collapsed=0
 
 [Window][Cubemap Editor]
-ViewportPos=183,56
+ViewportPos=222,45
 ViewportId=0xD8214B93
-Size=1488,1108
+Size=1311,1034
 Collapsed=0
 
 [Table][0xF5C0C183,2]
